// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<RCTScrollView
  onRefresh={[Function]}
  refreshControl={
    <RefreshControlMock
      onRefresh={[Function]}
      refreshing={false}
    />
  }
  refreshing={false}
>
  <RCTRefreshControl />
  <View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hasTVPreferredFocus={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
          },
          undefined,
        ]
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "flex": 1,
              "paddingBottom": 16,
              "paddingLeft": 16,
              "paddingRight": 16,
            },
            Object {
              "paddingBottom": 17,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 14,
            },
          ]
        }
      >
        <View
          style={Object {}}
        />
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <View
              accessibilityLabel={undefined}
              accessible={false}
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "marginBottom": 4,
                }
              }
            />
            <Text
              accessibilityTraits="header"
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontFamily": ".SFUIDisplay-semibold",
                    "fontSize": 20,
                  },
                  undefined,
                ]
              }
            >
              learn to write code
            </Text>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "marginTop": 2,
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Object {
                      "color": "#8B969E",
                      "fontWeight": "500",
                    },
                    Object {
                      "fontFamily": ".SFUIDisplay-medium",
                    },
                  ]
                }
              >
                20
                 
                pts
              </Text>
              <View
                style={
                  Array [
                    Object {
                      "marginLeft": 14,
                    },
                    Object {
                      "alignItems": "center",
                      "flex": 1,
                      "flexDirection": "row",
                    },
                  ]
                }
              >
                <Image
                  source={1}
                  style={
                    Array [
                      Object {
                        "height": 21,
                        "tintColor": "#8B969E",
                        "width": 21,
                      },
                      Object {},
                    ]
                  }
                />
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "fontFamily": ".SFUIDisplay",
                      },
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 16,
                      },
                      Array [
                        Object {
                          "color": "#8B969E",
                          "fontWeight": "500",
                          "marginLeft": 5,
                        },
                        Object {
                          "color": "#8B969E",
                        },
                      ],
                      Object {
                        "fontFamily": ".SFUIDisplay-medium",
                      },
                    ]
                  }
                >
                  Unpublished
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hasTVPreferredFocus={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
          },
          undefined,
        ]
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "flex": 1,
              "paddingBottom": 16,
              "paddingLeft": 16,
              "paddingRight": 16,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Object {
              "borderTopColor": "#C7CDD1",
              "borderTopWidth": 0.5,
              "paddingBottom": 16,
            }
          }
        />
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <View
              accessibilityLabel="Due Dates, Double tap for details."
              accessible={true}
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "marginBottom": 4,
                }
              }
            >
              <Image
                source={1}
                style={
                  Object {
                    "height": 19,
                    "marginRight": 5,
                    "tintColor": "#8B969E",
                    "width": 19,
                  }
                }
              />
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Object {
                      "color": "#8B969E",
                      "fontSize": 16,
                      "fontWeight": "500",
                      "paddingTop": 2,
                    },
                    Object {
                      "fontFamily": ".SFUIDisplay-medium",
                    },
                  ]
                }
              >
                Due
              </Text>
            </View>
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <View
                accessibilityLabel={undefined}
                accessible={true}
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "fontFamily": ".SFUIDisplay",
                      },
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 16,
                      },
                      Object {
                        "paddingTop": 2,
                      },
                      Object {
                        "fontFamily": ".SFUIDisplay",
                      },
                    ]
                  }
                >
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {
                          "fontFamily": ".SFUIDisplay",
                        },
                        Object {
                          "color": "#2D3B45",
                          "fontSize": 16,
                        },
                        Object {
                          "fontWeight": "600",
                        },
                        Object {
                          "fontFamily": ".SFUIDisplay-semibold",
                        },
                      ]
                    }
                  >
                    Due:
                  </Text>
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {
                          "fontFamily": ".SFUIDisplay",
                        },
                        Object {
                          "color": "#2D3B45",
                          "fontSize": 16,
                        },
                        Object {},
                        Object {
                          "fontFamily": ".SFUIDisplay",
                        },
                      ]
                    }
                  >
                     May 31, 2017 at 10:59 PM
                  </Text>
                </Text>
              </View>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Object {
                      "paddingTop": 2,
                    },
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                  ]
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "fontFamily": ".SFUIDisplay",
                      },
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 16,
                      },
                      Object {
                        "fontWeight": "600",
                      },
                      Object {
                        "fontFamily": ".SFUIDisplay-semibold",
                      },
                    ]
                  }
                >
                  For:
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "fontFamily": ".SFUIDisplay",
                      },
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 16,
                      },
                      Object {},
                      Object {
                        "fontFamily": ".SFUIDisplay",
                      },
                    ]
                  }
                >
                   -
                </Text>
              </Text>
              <View>
                <View
                  accessibilityLabel={undefined}
                  accessible={true}
                >
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {
                          "fontFamily": ".SFUIDisplay",
                        },
                        Object {
                          "color": "#2D3B45",
                          "fontSize": 16,
                        },
                        Object {
                          "paddingTop": 2,
                        },
                        Object {
                          "fontFamily": ".SFUIDisplay",
                        },
                      ]
                    }
                  >
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "fontFamily": ".SFUIDisplay",
                          },
                          Object {
                            "color": "#2D3B45",
                            "fontSize": 16,
                          },
                          Object {
                            "fontWeight": "600",
                          },
                          Object {
                            "fontFamily": ".SFUIDisplay-semibold",
                          },
                        ]
                      }
                    >
                      Available from:
                    </Text>
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "fontFamily": ".SFUIDisplay",
                          },
                          Object {
                            "color": "#2D3B45",
                            "fontSize": 16,
                          },
                          Object {},
                          Object {
                            "fontFamily": ".SFUIDisplay",
                          },
                        ]
                      }
                    >
                       Mar 16, 2017 at 11:00 PM
                    </Text>
                  </Text>
                </View>
                <View
                  accessibilityLabel={undefined}
                  accessible={true}
                >
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {
                          "fontFamily": ".SFUIDisplay",
                        },
                        Object {
                          "color": "#2D3B45",
                          "fontSize": 16,
                        },
                        Object {
                          "paddingTop": 2,
                        },
                        Object {
                          "fontFamily": ".SFUIDisplay",
                        },
                      ]
                    }
                  >
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "fontFamily": ".SFUIDisplay",
                          },
                          Object {
                            "color": "#2D3B45",
                            "fontSize": 16,
                          },
                          Object {
                            "fontWeight": "600",
                          },
                          Object {
                            "fontFamily": ".SFUIDisplay-semibold",
                          },
                        ]
                      }
                    >
                      Available to:
                    </Text>
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "fontFamily": ".SFUIDisplay",
                          },
                          Object {
                            "color": "#2D3B45",
                            "fontSize": 16,
                          },
                          Object {},
                          Object {
                            "fontFamily": ".SFUIDisplay",
                          },
                        ]
                      }
                    >
                       May 31, 2017 at 10:59 PM
                    </Text>
                  </Text>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 0,
                "flexDirection": "row",
                "justifyContent": "flex-end",
                "paddingRight": 2,
                "width": 10,
              }
            }
          >
            <View
              style={
                Object {
                  "alignSelf": "center",
                  "backgroundColor": "transparent",
                  "borderColor": "#c7c7cc",
                  "borderRightWidth": 2,
                  "borderTopWidth": 2,
                  "height": 10,
                  "marginLeft": 7,
                  "transform": Array [
                    Object {
                      "rotate": "45deg",
                    },
                  ],
                  "width": 10,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hasTVPreferredFocus={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
          },
          undefined,
        ]
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "flex": 1,
              "paddingBottom": 16,
              "paddingLeft": 16,
              "paddingRight": 16,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Object {
              "borderTopColor": "#C7CDD1",
              "borderTopWidth": 0.5,
              "paddingBottom": 16,
            }
          }
        />
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <View
              accessibilityLabel={undefined}
              accessible={false}
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "marginBottom": 4,
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Object {
                      "color": "#8B969E",
                      "fontSize": 16,
                      "fontWeight": "500",
                      "paddingTop": 2,
                    },
                    Object {
                      "fontFamily": ".SFUIDisplay-medium",
                    },
                  ]
                }
              >
                Submission Types
              </Text>
            </View>
            <View
              style={
                Object {
                  "flexDirection": "column",
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Object {
                      "flex": 1,
                    },
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                  ]
                }
              >
                online text entry
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Object {
                      "flex": 1,
                    },
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                  ]
                }
              >
                online url
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Object {
                      "flex": 1,
                    },
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                  ]
                }
              >
                media recording
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Object {
                      "flex": 1,
                    },
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                  ]
                }
              >
                online upload
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hasTVPreferredFocus={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
          },
          undefined,
        ]
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "flex": 1,
              "paddingBottom": 16,
              "paddingLeft": 16,
              "paddingRight": 16,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Object {
              "borderTopColor": "#C7CDD1",
              "borderTopWidth": 0.5,
              "paddingBottom": 16,
            }
          }
        />
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <View
              accessibilityLabel={undefined}
              accessible={false}
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "marginBottom": 4,
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Object {
                      "color": "#8B969E",
                      "fontSize": 16,
                      "fontWeight": "500",
                      "paddingTop": 2,
                    },
                    Object {
                      "fontFamily": ".SFUIDisplay-medium",
                    },
                  ]
                }
              >
                Submissions
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 0,
                "flexDirection": "row",
                "justifyContent": "flex-end",
                "paddingRight": 2,
                "width": 10,
              }
            }
          >
            <View
              style={
                Object {
                  "alignSelf": "center",
                  "backgroundColor": "transparent",
                  "borderColor": "#c7c7cc",
                  "borderRightWidth": 2,
                  "borderTopWidth": 2,
                  "height": 10,
                  "marginLeft": 7,
                  "transform": Array [
                    Object {
                      "rotate": "45deg",
                    },
                  ],
                  "width": 10,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hasTVPreferredFocus={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
          },
          undefined,
        ]
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "flex": 1,
              "paddingBottom": 16,
              "paddingLeft": 16,
              "paddingRight": 16,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Object {
              "borderTopColor": "#C7CDD1",
              "borderTopWidth": 0.5,
              "paddingBottom": 16,
            }
          }
        />
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <View
              accessibilityLabel={undefined}
              accessible={false}
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "marginBottom": 4,
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Object {
                      "color": "#8B969E",
                      "fontSize": 16,
                      "fontWeight": "500",
                      "paddingTop": 2,
                    },
                    Object {
                      "fontFamily": ".SFUIDisplay-medium",
                    },
                  ]
                }
              >
                Description
              </Text>
            </View>
            <WebView
              injectedJavaScript="
              var height = document.getElementById('whizzy_content').clientHeight;
              postMessage(JSON.stringify({type: 'UPDATE_HEIGHT', data: height}));
            "
              onMessage={[Function]}
              source={
                Object {
                  "html": "
                <html>
                    <head>
                        <meta name=\\"viewport\\" content=\\"width={{content-width}},
                            initial-scale = 1.0, user-scalable = no\\" />
                        <style>
                            body {
                                font: -apple-system-body;
                                margin: 0;
                                padding: 0;
                                color: {{font-color}};
                                background-color: {{background-color}};
                            }
                            img {
                                width: auto;
                                height: auto;
                                max-width: 100%;
                            }
                            video {
                                width: auto;
                                height: auto;
                                max-width: 100%;
                            }
                            #whizzy_content {
                                padding: {{padding}};
                                margin: 0;
                            }
                        </style>
                    </head>
                <body>
                    <div id='whizzy_content'>
                    a course that can take any beginner to professional in a matter of microseconds.  Harness the power of your favorite languages like PHP and Cold Fusion.
                    </div>
                </body>
                
                <script type=\\"text/javascript\\">
                    function onLoadAllImages(callback) {
                        var images = document.getElementsByTagName('img');
                
                        for (var i = 0; i < images.length; i++) {
                            if (images[i].src == '' || images[i].src == undefined || !images[i].hasAttribute('src')) {
                                images[i].parentNode.removeChild(images[i]);
                            }
                        }
                
                        images = document.getElementsByTagName('img');
                
                        var loadedImageCount = 0;
                
                        if (images.length > 0) {
                            for(var i = 0; i < images.length; i++) {
                                images[i].onload=checkIfImagesLoaded;
                                images[i].onerror=checkIfImagesLoaded;
                            }
                        }
                        else {
                            callback();
                        }
                
                        function checkIfImagesLoaded() {
                            loadedImageCount++;
                            if(loadedImageCount == images.length) {
                                callback();
                            }
                        }
                    }
                
                    onLoadAllImages(function () {
                        // Inform the DiscussionEntryCell that all the images are loaded
                        var iframe = document.createElement(\\"iframe\\");
                        iframe.setAttribute(\\"src\\", \\"whizzywig://finishedLoadingImages/\\");
                        document.documentElement.appendChild(iframe);
                        iframe.parentNode.removeChild(iframe);
                        iframe = null;
                    });
                </script>
                </html>
                ",
                }
              }
              style={
                Array [
                  Object {
                    "flex": 1,
                  },
                  Object {
                    "height": 0,
                  },
                ]
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`renders loading 1`] = `
<RCTScrollView
  onRefresh={[Function]}
  refreshControl={
    <RefreshControlMock
      onRefresh={[Function]}
      refreshing={true}
    />
  }
  refreshing={true}
>
  <RCTRefreshControl />
  <View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hasTVPreferredFocus={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
          },
          undefined,
        ]
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "flex": 1,
              "paddingBottom": 16,
              "paddingLeft": 16,
              "paddingRight": 16,
            },
            Object {
              "paddingBottom": 17,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 14,
            },
          ]
        }
      >
        <View
          style={Object {}}
        />
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <View
              accessibilityLabel={undefined}
              accessible={false}
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "marginBottom": 4,
                }
              }
            />
            <Text
              accessibilityTraits="header"
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontFamily": ".SFUIDisplay-semibold",
                    "fontSize": 20,
                  },
                  undefined,
                ]
              }
            >
              learn to write code
            </Text>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "marginTop": 2,
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Object {
                      "color": "#8B969E",
                      "fontWeight": "500",
                    },
                    Object {
                      "fontFamily": ".SFUIDisplay-medium",
                    },
                  ]
                }
              >
                20
                 
                pts
              </Text>
              <View
                style={
                  Array [
                    Object {
                      "marginLeft": 14,
                    },
                    Object {
                      "alignItems": "center",
                      "flex": 1,
                      "flexDirection": "row",
                    },
                  ]
                }
              >
                <Image
                  source={1}
                  style={
                    Array [
                      Object {
                        "height": 21,
                        "tintColor": "#8B969E",
                        "width": 21,
                      },
                      Object {},
                    ]
                  }
                />
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "fontFamily": ".SFUIDisplay",
                      },
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 16,
                      },
                      Array [
                        Object {
                          "color": "#8B969E",
                          "fontWeight": "500",
                          "marginLeft": 5,
                        },
                        Object {
                          "color": "#8B969E",
                        },
                      ],
                      Object {
                        "fontFamily": ".SFUIDisplay-medium",
                      },
                    ]
                  }
                >
                  Unpublished
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hasTVPreferredFocus={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
          },
          undefined,
        ]
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "flex": 1,
              "paddingBottom": 16,
              "paddingLeft": 16,
              "paddingRight": 16,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Object {
              "borderTopColor": "#C7CDD1",
              "borderTopWidth": 0.5,
              "paddingBottom": 16,
            }
          }
        />
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <View
              accessibilityLabel="Due Dates, Double tap for details."
              accessible={true}
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "marginBottom": 4,
                }
              }
            >
              <Image
                source={1}
                style={
                  Object {
                    "height": 19,
                    "marginRight": 5,
                    "tintColor": "#8B969E",
                    "width": 19,
                  }
                }
              />
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Object {
                      "color": "#8B969E",
                      "fontSize": 16,
                      "fontWeight": "500",
                      "paddingTop": 2,
                    },
                    Object {
                      "fontFamily": ".SFUIDisplay-medium",
                    },
                  ]
                }
              >
                Due
              </Text>
            </View>
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <View
                accessibilityLabel={undefined}
                accessible={true}
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "fontFamily": ".SFUIDisplay",
                      },
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 16,
                      },
                      Object {
                        "paddingTop": 2,
                      },
                      Object {
                        "fontFamily": ".SFUIDisplay",
                      },
                    ]
                  }
                >
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {
                          "fontFamily": ".SFUIDisplay",
                        },
                        Object {
                          "color": "#2D3B45",
                          "fontSize": 16,
                        },
                        Object {
                          "fontWeight": "600",
                        },
                        Object {
                          "fontFamily": ".SFUIDisplay-semibold",
                        },
                      ]
                    }
                  >
                    Due:
                  </Text>
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {
                          "fontFamily": ".SFUIDisplay",
                        },
                        Object {
                          "color": "#2D3B45",
                          "fontSize": 16,
                        },
                        Object {},
                        Object {
                          "fontFamily": ".SFUIDisplay",
                        },
                      ]
                    }
                  >
                     May 31, 2017 at 10:59 PM
                  </Text>
                </Text>
              </View>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Object {
                      "paddingTop": 2,
                    },
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                  ]
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "fontFamily": ".SFUIDisplay",
                      },
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 16,
                      },
                      Object {
                        "fontWeight": "600",
                      },
                      Object {
                        "fontFamily": ".SFUIDisplay-semibold",
                      },
                    ]
                  }
                >
                  For:
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "fontFamily": ".SFUIDisplay",
                      },
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 16,
                      },
                      Object {},
                      Object {
                        "fontFamily": ".SFUIDisplay",
                      },
                    ]
                  }
                >
                   -
                </Text>
              </Text>
              <View>
                <View
                  accessibilityLabel={undefined}
                  accessible={true}
                >
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {
                          "fontFamily": ".SFUIDisplay",
                        },
                        Object {
                          "color": "#2D3B45",
                          "fontSize": 16,
                        },
                        Object {
                          "paddingTop": 2,
                        },
                        Object {
                          "fontFamily": ".SFUIDisplay",
                        },
                      ]
                    }
                  >
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "fontFamily": ".SFUIDisplay",
                          },
                          Object {
                            "color": "#2D3B45",
                            "fontSize": 16,
                          },
                          Object {
                            "fontWeight": "600",
                          },
                          Object {
                            "fontFamily": ".SFUIDisplay-semibold",
                          },
                        ]
                      }
                    >
                      Available from:
                    </Text>
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "fontFamily": ".SFUIDisplay",
                          },
                          Object {
                            "color": "#2D3B45",
                            "fontSize": 16,
                          },
                          Object {},
                          Object {
                            "fontFamily": ".SFUIDisplay",
                          },
                        ]
                      }
                    >
                       Mar 16, 2017 at 11:00 PM
                    </Text>
                  </Text>
                </View>
                <View
                  accessibilityLabel={undefined}
                  accessible={true}
                >
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {
                          "fontFamily": ".SFUIDisplay",
                        },
                        Object {
                          "color": "#2D3B45",
                          "fontSize": 16,
                        },
                        Object {
                          "paddingTop": 2,
                        },
                        Object {
                          "fontFamily": ".SFUIDisplay",
                        },
                      ]
                    }
                  >
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "fontFamily": ".SFUIDisplay",
                          },
                          Object {
                            "color": "#2D3B45",
                            "fontSize": 16,
                          },
                          Object {
                            "fontWeight": "600",
                          },
                          Object {
                            "fontFamily": ".SFUIDisplay-semibold",
                          },
                        ]
                      }
                    >
                      Available to:
                    </Text>
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "fontFamily": ".SFUIDisplay",
                          },
                          Object {
                            "color": "#2D3B45",
                            "fontSize": 16,
                          },
                          Object {},
                          Object {
                            "fontFamily": ".SFUIDisplay",
                          },
                        ]
                      }
                    >
                       May 31, 2017 at 10:59 PM
                    </Text>
                  </Text>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 0,
                "flexDirection": "row",
                "justifyContent": "flex-end",
                "paddingRight": 2,
                "width": 10,
              }
            }
          >
            <View
              style={
                Object {
                  "alignSelf": "center",
                  "backgroundColor": "transparent",
                  "borderColor": "#c7c7cc",
                  "borderRightWidth": 2,
                  "borderTopWidth": 2,
                  "height": 10,
                  "marginLeft": 7,
                  "transform": Array [
                    Object {
                      "rotate": "45deg",
                    },
                  ],
                  "width": 10,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hasTVPreferredFocus={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
          },
          undefined,
        ]
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "flex": 1,
              "paddingBottom": 16,
              "paddingLeft": 16,
              "paddingRight": 16,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Object {
              "borderTopColor": "#C7CDD1",
              "borderTopWidth": 0.5,
              "paddingBottom": 16,
            }
          }
        />
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <View
              accessibilityLabel={undefined}
              accessible={false}
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "marginBottom": 4,
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Object {
                      "color": "#8B969E",
                      "fontSize": 16,
                      "fontWeight": "500",
                      "paddingTop": 2,
                    },
                    Object {
                      "fontFamily": ".SFUIDisplay-medium",
                    },
                  ]
                }
              >
                Submission Types
              </Text>
            </View>
            <View
              style={
                Object {
                  "flexDirection": "column",
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Object {
                      "flex": 1,
                    },
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                  ]
                }
              >
                online text entry
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Object {
                      "flex": 1,
                    },
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                  ]
                }
              >
                online url
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Object {
                      "flex": 1,
                    },
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                  ]
                }
              >
                media recording
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Object {
                      "flex": 1,
                    },
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                  ]
                }
              >
                online upload
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hasTVPreferredFocus={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
          },
          undefined,
        ]
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "flex": 1,
              "paddingBottom": 16,
              "paddingLeft": 16,
              "paddingRight": 16,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Object {
              "borderTopColor": "#C7CDD1",
              "borderTopWidth": 0.5,
              "paddingBottom": 16,
            }
          }
        />
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <View
              accessibilityLabel={undefined}
              accessible={false}
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "marginBottom": 4,
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Object {
                      "color": "#8B969E",
                      "fontSize": 16,
                      "fontWeight": "500",
                      "paddingTop": 2,
                    },
                    Object {
                      "fontFamily": ".SFUIDisplay-medium",
                    },
                  ]
                }
              >
                Submissions
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 0,
                "flexDirection": "row",
                "justifyContent": "flex-end",
                "paddingRight": 2,
                "width": 10,
              }
            }
          >
            <View
              style={
                Object {
                  "alignSelf": "center",
                  "backgroundColor": "transparent",
                  "borderColor": "#c7c7cc",
                  "borderRightWidth": 2,
                  "borderTopWidth": 2,
                  "height": 10,
                  "marginLeft": 7,
                  "transform": Array [
                    Object {
                      "rotate": "45deg",
                    },
                  ],
                  "width": 10,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hasTVPreferredFocus={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
          },
          undefined,
        ]
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "flex": 1,
              "paddingBottom": 16,
              "paddingLeft": 16,
              "paddingRight": 16,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Object {
              "borderTopColor": "#C7CDD1",
              "borderTopWidth": 0.5,
              "paddingBottom": 16,
            }
          }
        />
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <View
              accessibilityLabel={undefined}
              accessible={false}
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "marginBottom": 4,
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Object {
                      "color": "#8B969E",
                      "fontSize": 16,
                      "fontWeight": "500",
                      "paddingTop": 2,
                    },
                    Object {
                      "fontFamily": ".SFUIDisplay-medium",
                    },
                  ]
                }
              >
                Description
              </Text>
            </View>
            <WebView
              injectedJavaScript="
              var height = document.getElementById('whizzy_content').clientHeight;
              postMessage(JSON.stringify({type: 'UPDATE_HEIGHT', data: height}));
            "
              onMessage={[Function]}
              source={
                Object {
                  "html": "
                <html>
                    <head>
                        <meta name=\\"viewport\\" content=\\"width={{content-width}},
                            initial-scale = 1.0, user-scalable = no\\" />
                        <style>
                            body {
                                font: -apple-system-body;
                                margin: 0;
                                padding: 0;
                                color: {{font-color}};
                                background-color: {{background-color}};
                            }
                            img {
                                width: auto;
                                height: auto;
                                max-width: 100%;
                            }
                            video {
                                width: auto;
                                height: auto;
                                max-width: 100%;
                            }
                            #whizzy_content {
                                padding: {{padding}};
                                margin: 0;
                            }
                        </style>
                    </head>
                <body>
                    <div id='whizzy_content'>
                    a course that can take any beginner to professional in a matter of microseconds.  Harness the power of your favorite languages like PHP and Cold Fusion.
                    </div>
                </body>
                
                <script type=\\"text/javascript\\">
                    function onLoadAllImages(callback) {
                        var images = document.getElementsByTagName('img');
                
                        for (var i = 0; i < images.length; i++) {
                            if (images[i].src == '' || images[i].src == undefined || !images[i].hasAttribute('src')) {
                                images[i].parentNode.removeChild(images[i]);
                            }
                        }
                
                        images = document.getElementsByTagName('img');
                
                        var loadedImageCount = 0;
                
                        if (images.length > 0) {
                            for(var i = 0; i < images.length; i++) {
                                images[i].onload=checkIfImagesLoaded;
                                images[i].onerror=checkIfImagesLoaded;
                            }
                        }
                        else {
                            callback();
                        }
                
                        function checkIfImagesLoaded() {
                            loadedImageCount++;
                            if(loadedImageCount == images.length) {
                                callback();
                            }
                        }
                    }
                
                    onLoadAllImages(function () {
                        // Inform the DiscussionEntryCell that all the images are loaded
                        var iframe = document.createElement(\\"iframe\\");
                        iframe.setAttribute(\\"src\\", \\"whizzywig://finishedLoadingImages/\\");
                        document.documentElement.appendChild(iframe);
                        iframe.parentNode.removeChild(iframe);
                        iframe = null;
                    });
                </script>
                </html>
                ",
                }
              }
              style={
                Array [
                  Object {
                    "flex": 1,
                  },
                  Object {
                    "height": 0,
                  },
                ]
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;
